# src/gen/java/io/swagger/api/WinnerApiService.java
@@ -1,0 +1,21 @@
+package io.swagger.api;
+
+import io.swagger.api.*;
+import io.swagger.model.*;
+
+import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
+
+import io.swagger.model.Winner;
+
+import java.util.Map;
+import java.util.List;
+import io.swagger.api.NotFoundException;
+
+import java.io.InputStream;
+
+import javax.ws.rs.core.Response;
+import javax.ws.rs.core.SecurityContext;
+import javax.validation.constraints.*;
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJerseyServerCodegen", date = "2020-07-16T04:40:34.487Z[GMT]")public abstract class WinnerApiService {
+    public abstract Response isWinner( String gameId, String playerId,SecurityContext securityContext) throws NotFoundException;
+}
